2004-11-26  JP Rosevear  <jpr@novell.com>

	* test-info-label.c: test prog

	* e-url-entry.c: get image directly from icon factory

	* e-combo-button.c: ditto; convert to G_DEFINE_TYPE

	* e-activity-handler.c: convert to G_DEFINE_TYPE
	
	* e-task-widget.c: ditto

	* e-task-bar.c: ditto

	* e-multi-config-dialog.c: ditto

	* e-dropdown-button.c: ditto

	* e-cell-renderer-combo.c: ditto

	* e-cell-date-edit.c: ditto

	* e-calendar.c: ditto

	* e-calendar-item.c: ditto

	* Makefile.am: don't build the title bar, build an info label test
	program

2004-10-28  Li Yuan  <li.yuan@sun.com>

	* e-calendar.c: (e_calendar_init), (e_calendar_new): Make
	accessibility name and description translatable.  Add a atk name
	for the two buttons so that they can be UI grabbed by GOK.
	
	* e-dateedit.c: (e_date_edit_new), (create_children): Add a name
	for atk object.  Make accessibility name and description
	translatable.  Add name and description for the date_entry,
	date_button and time_combo.
	(e_date_edit_show_date_popup), (hide_date_popup): Grab and ungrab
	keyboard.  add_relation(): New function to add labelled_by
	relation for entry and combobox.
	
	* e-map.c: (e_map_new): Add a name for world map widget.  Make
	accessibility name and description translatable.  Set the atk role
	to image.
	
	* e-multi-config-dialog.c: (e_multi_config_dialog_add_page): Add
	an atk name for the page.
	
2004-10-27  JP Rosevear  <jpr@novell.com>

	* Makefile.am: use E_WIDGET instead of GNOME_FULL

2004-10-14  JP Rosevear  <jpr@novell.com>

	* e-pilot-settings.c: fix e-source-option-menu include

2004-10-13  JP Rosevear  <jpr@novell.com>

	* Makefile.am: don't build source selector or source option menu
	or test programs any more

2004-10-08  Harry Lu  <harry.lu@sun.com>

	* e-source-selector.c: (e_source_selector_popup_menu),
	(class_init): implement popup_menu so that popup menu can
	be shown with Shift+F10.

2004-10-06  JP Rosevear  <jpr@novell.com>
 
 	Fixes #66164
 	